

[project]
name = "mov"
version = "0.2.0"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
[project.scripts]
mov-ping = "mov.cli:ping"

[projects.urls]
GIT="https://github.com/DONGUK777/tah.git"
Issues="https://github.com/DONGUK777/tah/issues"
