[project]
name = "1"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "numpy>=2.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
[project.scripts]
mov-ping = "mov.cli:ping"

[projects.urls]
GIT="https://github.com/DONGUK777/tah.git"
Issues="https://github.com/DONGUK777/tah/issues"
